--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ deploy:
   access_key_id: $ACCESSKEYID
   secret_access_key:
     secure: "$SECRETACCESSKEY"
-  region: "ca-central-1"  
-  app: "elastic-beanstalk-tutorial"
-  env: "elastic-beanstalk-tutorial-dev"
-  bucket_name: "elasticbeanstalk-ca-central-1-882371129764"
+  region: "us-west-2"  
+  app: "myphp"
+  env: "Myphp-env"
+  bucket_name: "$S3BUCKET"
   on:
     branch: master
