--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: php
 
 php:
+  - "7.2"
+  
+sudo: required
 
-  - 7.2
+services:
+  - php
+  
+after_deploy:
+  - echo "done deploying"
 
 deploy:
   provider: elasticbeanstalk
