--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+language: php
+
+php:
+  - 7.2
+
 deploy:
   provider: elasticbeanstalk
   access_key_id: $ACCESSKEYID
@@ -8,4 +13,4 @@ deploy:
   env: "Myphp-env"
   bucket_name: "$S3BUCKET"
   on:
-    branch: any
+    branch: master
