--- a/.travis.yml
+++ b/.travis.yml
@@ -4,23 +4,24 @@ language: php
 
 # Define the php versions against we want to test our code
 php:
-- 7.1
+#- 7.1
 - 7.2
 
 # Note: Code coverage requires php-xDebug extension enabled on CI server
 
-install:
-- travis_retry composer install --no-interaction --no-suggest
+#install:
+#- travis_retry composer install --no-interaction --no-suggest
 
 # Testing the app (see phpunit.xml) for configs, generating Code Coverage report
-script:
-- composer test -- --coverage-clover=coverage.xml
+#script:
+#- composer test -- --coverage-clover=coverage.xml
 
 #after_script:
 
 after_success:
 # Submit coverage report to https://codecov.io
-- bash <(curl -s https://codecov.io/bash)
+#- bash <(curl -s https://codecov.io/bash)
+- bash -x ebstatus.sh
 
 #after_failure:
 
@@ -31,9 +32,9 @@ after_success:
 #  - dev
 
 # You can delete the cache using travis-ci web interface
-cache:
-  directories:
-  - $HOME/.composer/cache
+#cache:
+#  directories:
+#  - $HOME/.composer/cache
   
 deploy:
   provider: elasticbeanstalk
