--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
 # Note: Code coverage requires php-xDebug extension enabled on CI server
 install:
   - composer self-update && composer --version
-  - composer install --prefer-dist
+  #- composer install --prefer-dist
 script:
   - vendor/bin/phpunit --verbose --coverage-clover=coverage.xml
 after_success:
