--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ php:
 
 # Note: Code coverage requires php-xDebug extension enabled on CI server
 install:
-  - composer self-update && composer --version
+  #- composer self-update && composer --version
   #- composer install --prefer-dist
 script:
   - vendor/bin/phpunit --verbose --coverage-clover=coverage.xml
